# kcp-ovo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-publish.yml  rust-ci.yml
docs/: api-guide.md  performance.md  troubleshooting.md  tutorial.md
examples/: file-transfer.rs  low-level-api.rs  stream-api.rs  stream-easy-api.rs
src/: error.rs  lib.rs  stream.rs
src/codec/: encoder.rs  mod.rs
src/config/: mod.rs  params.rs
src/core/: kcp.rs  mod.rs
src/helper/: kcp_cmd.rs  kcp_const_config.rs  mod.rs  packet.rs  time.rs
src/queue/: deque.rs  mod.rs  segment.rs
update_log/v0.1.1/: OPTIMIZATION_REPORT.md  PHASE18_SUMMARY.md
