[package]
name = "kcp-ovo"
version = "0.1.0"
edition = "2024"
description = "KCP协议的纯Rust实现"
license = "MIT"
rust-version = "1.92.0"
repository = "https://github.com/cherish-ltt/kcp-ovo"

[features]
default = ["stream"]
stream = []  # UDP传输层封装（默认启用）

[dependencies]
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
rand = "0.8"

# [[bench]]
# name = "kcp_benchmarks"
# harness = false
